MOBILE-227 Fixing Words in menu wrap under the left-side icons (eg long course names)

--- a/css/styles.css
+++ b/css/styles.css
@@ -949,6 +949,7 @@ button {
 }
 
 .plugin-name {
+  margin-left: 30px;
   margin-right: 15px;
   padding-right: 15px;
   padding-top: 4px;
